--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,6 +1,7 @@
 body {
     max-width: 600px;
     margin: auto;
+    font-family: sans-serif;
 }
 
 p {
@@ -12,4 +13,3 @@ article + article {
     padding-top: 3rem;
     border-top: 1px solid black;
 }
-
